@@ -1,16 +1,0 @@
-# Set the following values and any others 
-# you need loaded into the ENV. You can then
-# access the variables by using os.Getenv("KEY")
-# See https://github.com/gobuffalo/envy
-# Format is: 
-# Key=Value
-# Required for Mailgun to function:
-# MG_API_KEY=your-api-key
-# MG_DOMAIN=your-domain
-# MG_PUBLIC_API_KEY=your-public-key
-# MG_URL="https://api.mailgun.net/v3"
-
-MG_API_KEY=123456
-MG_DOMAIN=crazydomainname.lol
-MG_PUBLIC_API_KEY=cflat
-MG_URL="https://api.mailgun.net/v3"
